# python-requests

./: Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tox.ini
custom_requests/: __init__.py  __main__.py
custom_requests/lib/: exceptions.py
tests/: requirements.txt
