[metadata]
name = python-requests
author = Ryan Holt
author_email = ryanwholt@hotmail.com
summary = Handle HTTP requests.
description_file = README.md
description_content_type = text/x-rst; charset=UTF-8
home_page = https://github.com/Reyalsorik/python-requests
project_urls =
    Documentation = https://github.com/Reyalsorik/python-requests/README.md
    Source Code = https://github.com/Reyalsorik/python-requests

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages = custom_requests

[options]
include_package_data = true
